--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="css/style.css">
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta http-equiv="X-UA-Compatible" content="IE-edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>ГИПСОЛИТ</title>
+	<link rel="icon" href="img/favicon.ico">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/style.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 </head>
 <body>
-	ytkkj
+	<main class="container">
+		<div class="header">
+			<div class="row no-gutters align-items-center">
+				<div class="col-auto">
+					<div class="logo">
+						<img src="img/logo.png" alt="ГИПСОЛИТ Штукатурка стен"></div>
+					</div>
+				<div class="col-auto offset-4"><a class="phone" href="">+7 495 771 05 08</a> </div>
+				<div class="col-auto">
+					<button class="header-btn button">Получить консультацию</button>
+				</div>
+			</div>
+		</div>
+	</main>
 </body>
 </html>
