--- a/index.html
+++ b/index.html
@@ -7,23 +7,55 @@
 	<title>ГИПСОЛИТ</title>
 	<link rel="icon" href="img/favicon.ico">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-</head>
+</head> 
 <body>
-	<main class="container">
-		<div class="header">
-			<div class="row no-gutters align-items-center">
-				<div class="col-auto">
-					<div class="logo">
-						<img src="img/logo.png" alt="ГИПСОЛИТ Штукатурка стен"></div>
+	<main class="main">
+
+		<div class="container">
+			<div class="header">
+				<div class="row no-gutters align-items-center justify-content-between">
+					<div class="col-3">
+						<div class="logo">
+							<img src="img/logo.png" alt="ГИПСОЛИТ Штукатурка стен">
+						</div>
+					</div>	
+					<div class="col-2 offset-4">
+						<a class="main-phone" href="">+7 495 771 05 08</a>
 					</div>
-				<div class="col-auto offset-4"><a class="phone" href="">+7 495 771 05 08</a> </div>
-				<div class="col-auto">
-					<button class="header-btn button">Получить консультацию</button>
+					<div class="col-auto">
+						<button class="header-btn button">
+							Получить консультацию
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="main-content">
+				<div class="row no-gutters align-items-center justify-content-between">
+					<div class="col-6">
+						<h1><strong>автоматизированная</strong><br>штукатурка стен</h1>
+						<p class="main-subtitle">Идеально ровные стены<br>в кратчайшие сроки</p>
+						<div class="main-trigger">
+							<p>стоимость работ<br>от <strong>300</strong> <span>руб/м<sup>2</sup></span></p>
+						</div>
+						<strong class="main-pay">оплата по факту</strong>
+					</div>
+					<div class="col-6 main-form">
+						<p>для расчета точной стоимости закажите <strong>выезд замерщика</strong></p>
+						<form action="#">
+							<input type="text">
+							<input type="text">
+							<button></button>
+							<p>прием в день обращения*</p>
+						</form>
+						
+					</div>
 				</div>
 			</div>
 		</div>
+		
 	</main>
 </body>
 </html>
