--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 			<div class="main-content">
-				<div class="row no-gutters align-items-center justify-content-between">
+				<div class="row no-gutters align-items-start justify-content-between">
 					<div class="col-6">
 						<h1><strong>автоматизированная</strong><br>штукатурка стен</h1>
 						<p class="main-subtitle">Идеально ровные стены<br>в кратчайшие сроки</p>
@@ -42,13 +42,15 @@
 						</div>
 						<strong class="main-pay">оплата по факту</strong>
 					</div>
-					<div class="col-6 main-form">
-						<p>для расчета точной стоимости закажите <strong>выезд замерщика</strong></p>
+					<div class="col-4 col-offset-2  main-form">
+						<p class="main-form_header">Для расчета точной стоимости <br>закажите <strong>выезд замерщика</strong></p>
 						<form action="#">
-							<input type="text">
-							<input type="text">
-							<button></button>
-							<p>прием в день обращения*</p>
+							<label for="#">Ваше имя</label>
+							<input class="main-form_input"	type="text">
+							<label for="#">Номер телефона</label>
+							<input class="main-form_input" type="text">
+							<button class="button main-form_btn" type="submit">оставьте заявку</button>
+							<small>Приедем в день обращения*</small>
 						</form>
 						
 					</div>
