--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 </head> 
 <body>
-	<main class="main">
+	<main class="main img-fluid">
 
 		<div class="container">
 			<div class="header">
 				<div class="row no-gutters align-items-center justify-content-between">
-					<div class="col-3">
+					<div class="col-xl-3 col-md-3 col-sm-4">
 						<div class="logo">
 							<img src="img/logo.png" alt="ГИПСОЛИТ Штукатурка стен">
 						</div>
 					</div>	
-					<div class="col-2 offset-4">
+					<div class="col-xl-2 offset-xl-4 col-md-4 offset-md-2">
 						<a class="main-phone" href="">+7 495 771 05 08</a>
 					</div>
-					<div class="col-auto">
+					<div class="col-xl-3 col-md-3 col-sm-4">
 						<button class="header-btn button">
 							Получить консультацию
 						</button>
@@ -34,7 +34,7 @@
 			</div>
 			<div class="main-content">
 				<div class="row no-gutters align-items-start justify-content-between">
-					<div class="col-6">
+					<div class="col-md-6 col-sm-12">
 						<h1><strong>автоматизированная</strong><br>штукатурка стен</h1>
 						<p class="main-subtitle">Идеально ровные стены<br>в кратчайшие сроки</p>
 						<div class="main-trigger">
@@ -42,7 +42,7 @@
 						</div>
 						<strong class="main-pay">оплата по факту</strong>
 					</div>
-					<div class="col-4 col-offset-2  main-form">
+					<div class="col-xl-4 offset-xl-2 col-md-5 offset-md-1 main-form">
 						<p class="main-form_header">Для расчета точной стоимости <br>закажите <strong>выезд замерщика</strong></p>
 						<form action="#">
 							<label for="#">Ваше имя</label>
