starting sector "feedback"

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>ГИПСОЛИТ</title>
 		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/style.css">
-		
-		
+	
 	</head>
 
 	<body>
@@ -118,7 +118,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> 
 
 		<section class="prices">
 			<div class="container">
@@ -138,7 +138,7 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-4 col-md-12">
 						<div class="card prices-card">
-							<h4 class="card-title">Штукатурка Вашим материалом</h4>
+							<h3 class="card-title">Штукатурка Вашим материалом</h3>
 							<img class="card-img" src="img/prices-1.jpg" alt="Штукатурка Вашим материалом">
 							<span class="prices-tag">от <strong>300</strong> руб/м<sup>2</sup></span>
 							<ul class="prices-list">
@@ -151,7 +151,7 @@
 					</div>
 					<div class="col-lg-4 col-md-12">
 						<div class="card prices-card">
-							<h4 class="card-title">Штукатурка под шпаклёвку</h4>
+							<h3 class="card-title">Штукатурка под шпаклёвку</h3>
 							<img class="card-img" src="img/prices-2.jpg" alt="Штукатурка под шпаклёвку">
 							<span class="prices-tag">от <strong>530</strong> руб/м<sup>2</sup></span>
 							<ul class="prices-list">
@@ -166,7 +166,7 @@
 					</div>
 					<div class="col-lg-4 col-md-12">
 						<div class="card prices-card">
-							<h4 class="card-title">Штукатурка под обои</h4>
+							<h3 class="card-title">Штукатурка под обои</h3>
 							<img class="card-img" src="img/prices-3.jpg" alt="Штукатурка под обои">
 							<span class="prices-tag">от <strong>560</strong> руб/м<sup>2</sup></span>
 							<ul class="prices-list">
@@ -182,15 +182,124 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="feedback">
+			<div class="container">
+				<div class="feedback-title">
+					<h2>Отзывы</h2>
+				</div>
+				<div class="feedback-slider">
+					<div class="feedback-slider_item">
+						<div class="row">
+							<div class="col-6">
+								<div class="fotorama" data-nav="thumbs">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+								</div>
+							</div>
+							<div class="col-6">
+								<div class="feedback-slider_content">
+									<p>Объект: г.Москва, Нахимовский проспект д.10</p>
+									<p>Площадь: <strong>357 м2</strong></p>
+									<p>Выполнен за: <strong>10 дней</strong></p>
+									<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
+									<p>Особенности: <strong>перепады, неровности стен достигали до 6 см</strong></p>
+									<div class="media">
+									<img class="mr-3" src="img/feedback/fb-ava.png" alt="Generic placeholder image">
+									 <div class="media-body">
+									 	<span>Заказчик</span>
+									    <h3 class="mt-0">Нахимов Артём</h3>
+									    	
+									  </div>
+									</div>
+
+									<div class="feedback-text"><p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Заманивший взобравшись своих текста толку.</p></div>
+	
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="feedback-slider_item">
+						<div class="row">
+							<div class="col-6">
+								<div class="fotorama" data-nav="thumbs">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+								</div>
+							</div>
+							<div class="col-6">
+								<div class="feedback-slider_content">
+									<p>Объект: г.Москва, Нахимовский проспект д.10</p>
+									<p>Площадь: <strong>357 м2</strong></p>
+									<p>Выполнен <strong>за: 10 дней</strong></p>
+									<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
+									<p>Особенности: <strong>перепады, неровности стен достигали до 6 см</strong></p>
+									<div class="media">
+										<img class="mr-3" src="img/feedback/fb-ava.png" alt="Generic placeholder image">
+									 	<div class="media-body">
+									 		<span>Заказчик</span>
+									    	<h3 class="mt-0">Нахимов Артём</h3>
+									    </div>
+									</div>
+
+									<div class="feedback-text"><p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Заманивший взобравшись своих текста толку.</p></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="feedback-slider_item">
+						<div class="row">
+							<div class="col-6">
+								<div class="fotorama" data-nav="thumbs">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+									<img src="../img/feedback/fb-0.jpg" alt="">
+								</div>
+							</div>
+							<div class="col-6">
+								<div class="feedback-slider_content">
+									<p>Объект: г.Москва, Нахимовский проспект д.10</p>
+									<p>Площадь: <strong>357 м2</strong></p>
+									<p>Выполнен <strong>за: 10 дней</strong></p>
+									<p>Стоимость: <strong>550 рублей за квадратный метр</strong></p>
+									<p>Особенности: <strong>перепады, неровности стен достигали до 6 см</strong></p>
+									<div class="media">
+  										<img class="mr-3" src="img/feedback/fb-ava.png" alt="Generic placeholder image">
+ 										<div class="media-body">
+ 											<span>Заказчик</span>
+									    	<h3 class="mt-0">Нахимов Артём</h3>							    	
+									    </div>
+									</div>
+
+									<div class="feedback-text"><p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Заманивший взобравшись своих текста толку.</p></div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	
 	<!-- Модальные окна -->
-
+	
 	<!-- Получить консультацию -->
-	<div class="popup">
-		<div class="popup-dialog">
+	<div class="popup animated fadeInDown">
+		<div class="popup-dialog"> 
 			<div class="popup-content">
 				<button class="popup-close">&times</button>
-				<h4 class="popup-header">Заинтересовало?</h4>
+				<h3 class="popup-header">Заинтересовало?</h3>
 				<p>Оставьте свои контактне данные<br>для связи</p>
 				<div class="main-form popup-form">
 					<form action="#">
@@ -206,20 +315,33 @@
 			</div>
 		</div>
 	</div>
-	
-	<script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+
+	<!-- ПОДКЛЮЧАЕМЫЕ БИБЛЫ -->
+	<!-- Джейквери						 -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    	crossorigin="anonymous"></script>
 	<script	src="http://code.jquery.com/jquery-migrate-3.0.1.min.js"
 	  	integrity="sha256-F0O1TmEa4I8N24nY0bya59eP6svWcshqX1uzwaWC4F4="
 	  	crossorigin="anonymous"></script>
+	
+	<!-- анимация Wow -->
+	<script src="js/wow-min.js"></script>
+	<script>new WOW().init();</script>
+
+	<!-- Слик-слайдер -->
 	<link rel="stylesheet" href="slick-1.8.0/slick/slick.css">
 	<link rel="stylesheet" href="slick-1.8.0/slick/slick-theme.css">
 	<script src="slick-1.8.0/slick/slick.js"></script>
-	
+
+	<!-- Фоторама -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+	<!-- СКРИПТЫ -->
+
 	<script>
 		$(document).ready(function(){
+			/*Слайдер с приемуществами*/
 			$('.features-slider').slick({
     			infinite: true,
     			slidesToShow: 4,
@@ -233,7 +355,7 @@
 			        nextArrow: '<button class="next arrow"></button>',
 			        slidesToScroll: 2,
 			        infinite: true
-			        
+   
 			      }
 			    },
 			    {
@@ -256,11 +378,16 @@
 			    }
 				]
 	  		});
-		
-		// Не понятно, почему слипслайдер слетает после подключения других скриптов...
+			/*Слайдер с отзывами*/
+			$('.feedback-slider').slick({
+				prevArrow: '<button type="button" class="feedback-slider_btn feedback-prev"><img src="img/feedback/fb-bck.svg"></button>',
+				nextArrow: '<button type="button" class="feedback-slider_btn feedback-next"><img src="img/feedback/fb-nxt.svg"></button>',	
+			});
+			/* Всплывашка */
 			$('.popup-btn').on('click', function(event) {
 				event.preventDefault();
-				$('.popup').fadeIn();	
+				$('.popup').fadeIn();
+
 			});
 			$('.popup-close').on('click', function(event) {
 				event.preventDefault();
