--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 		<section class="features">
 			<div class="container">
-				<h2 class="features-header">Приемущества работы с нами</h2>
+				<div class="section-header"><h2>Приемущества работы с нами</h2></div>
 				<div class="features-slider">
 					<div class="features-block">
 						<div class="features-block_img">
@@ -124,7 +124,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-4 offset-lg-4 col-md-12">
-						<div class="prices-header">
+						<div class="section-header prices-header">
 							<h2>Цены</h2>
 							<p>Выберите вариант, который подходит Вам:</p>
 						</div>
@@ -186,7 +186,7 @@
 		<section class="feedback">
 			<div class="container">
 
-				<div class="feedback-title">
+				<div class="section-header">
 					<h2>Отзывы</h2>
 				</div>
 
@@ -317,7 +317,142 @@
 			<img src="img/feedback/fb-arm.png" alt="" class="feedback-arm">
 		</section>
 
+		<section class="scheme">
+			<div class="container">
+				<div class="section-header">
+					<h2>Схема работы</h2>
+					<p>Работа над вашим объектом будет включать в себя следующие этапы:</p>
+				</div>
+				<div class="row justify-content-center">
+					<div class="col-lg-4 col-md-6 col-8">
+						<div class="scheme-block">
+							<img src="img/scheme/1.png" alt="Заявка">
+							<h3>Заявка</h3>
+							<p>Оставляете онлайн заявку или звоните +7 495 771 05 08 </p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 col-8">
+						<div class="scheme-block">
+							<img src="img/scheme/2.png" alt="Выезд специалиста">
+							<h3>Выезд специалиста</h3>
+							<p>В течение 1 рабочего дня к Вам приезжает специалист, который выполнит замеры для точной стоимости работ</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 col-8">
+						<div class="scheme-block">
+							<img src="img/scheme/3.png" alt="Составление договора">
+							<h3>Составление договора</h3>
+							<p>Готовим договор и согласовываем с Вами </p>
+						</div>
+					</div>
+					
+					<div class="col-lg-4 col-md-6 col-8">
+						<div class="scheme-block">
+							<img src="img/scheme/4.png" alt="Начало работ">
+							<h3>Начало работ</h3>
+							<p>Доставляем материалы, оборудование, подписываем договор и начин</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 col-8">
+						<div class="scheme-block">
+							<img src="img/scheme/5.png" alt="Завершение работ">
+							<h3>Завершение работ</h3>
+							<p> После окончания работ Вы проверяете качество и подписываете акт</p>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 col-8">
+						<div class="scheme-block">
+							<!-- <img src="img/scheme/.png" alt="">
+							<h3></h3>
+							<p></p> -->
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
+		<section class="inclusive">
+			<div class="container">
+				<div class="section-header section-header_green">
+					<h2>Все на 100% включено!</h2>
+					<p>При выполнении работ с нашим материалом в стоимость входит:</p>
+				</div>
+				<div class="row justify-content-center">
+					<div class="col-lg-3 col-md-6 col-sm-12 align-self-center">
+						<div class="media">
+							<div class="mr-3"><span class=" circle-border"><span class="circle">1.</span></span></div>
+							<div class="media-body">
+								<h4>Материал:</h4>
+								<p>штукатурка, грунтовка или бетоноконтакт, маяки, сетка на стыки</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12">
+						<div class="media">
+							<div class="mr-3"><span class="circle-border"><span class="circle">2.</span></span></div>
+							<div class="media-body">
+								<h4>Доставка оборудования и материалат на объект</h4>
+								<p></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12">
+						<div class="media">
+							<div class="mr-3"><span class="circle-border"><span class="circle">3.</span></span></div>
+							<div class="media-body">
+								<h4>Подготовка поверхности</h4>
+								<p>(очистка, грунтование)</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12">
+						<div class="media">
+							<div class="mr-3"><span class="circle-border"><span class="circle">4.</span></span></div>
+							<div class="media-body">
+								<h4>Установка маяков</h4>
+								<p></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12">
+						<div class="media">
+							<div class="mr-3"><span class="circle-border"><span class="circle">5.</span></span></div>
+							<div class="media-body">
+								<h4>Оштукатуривание поверхности</h4>
+								<p></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12">
+						<div class="media">
+							<div class="mr-3"><span class="circle-border"><span class="circle">6.</span></span></div>
+							<div class="media-body">
+								<h4>Удаление маяков</h4>
+								<p></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12">
+						<div class="media">
+							<div class="mr-3"><span class="circle-border"><span class="circle">7.</span></span></div>
+							<div class="media-body">
+								<h4>Глянцевание</h4>
+								<p></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12">
+						<div class="media">
+							<div class="mr-3"><span class="circle-border"><span class="circle">8.</span></span></div>
+							<div class="media-body">
+								<h4>Уборка и вывоз мусора</h4>
+								<p></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	
 	<!-- Модальные окна -->
 	
