fnish sector "fears"

--- a/index.html
+++ b/index.html
@@ -453,6 +453,41 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="fears">
+			<div class="container">
+				<div class="section-header">
+					<h2>Мы развеем все опасения</h2>
+				</div>
+				<div class="row justify-content-between">
+					<div class="col-lg-5">
+						<div class="fears-list fears-list_problems">
+							<h4>Какие могут быть проблемы?</h4>
+							<ul>
+								<li>Стены и углы будут неровными</li>
+								<li>Ремонт затянется на долгое время</li>
+								<li>Сложности с доставкой и разгрузкой материалов</li>
+								<li>Останется мусор и пыль после работы</li>
+								
+							</ul>
+						</div>
+					</div>
+					<div class="col-lg-5">
+						<div class="fears-list fears-list_solutions">
+							<h4>Наши решения:</h4>
+							<ul>
+								<li>Высокая квалификация специалистов + минимум 5 лет опыта работы = идеально ровные поверхности</li>
+								<li>Соблюдаем сроки, которые прописаны в договоре. На квартиру площадью 135 м<sup>2</sup> уходит от 3 до 5 дней</li>
+								<li>Доставка материала и подъем беслатно</li>
+								<li>Убираем и вывозим мусор после работы</li>
+								
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<img src="img/fears/fears-girl.png" alt="fears-girl" class="fears-girl ">
+		</section>
 	
 	<!-- Модальные окна -->
 	
